Fixed weird zooming on ios

--- a/public/style.css
+++ b/public/style.css
@@ -62,3 +62,7 @@ body {
     padding: 5px;
     margin: 5px;
 }
+
+.todo-form button:active{
+    border: none;
+}
